<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="io.vamshedhar.inclass10.CreateContactActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp">

            <ImageView
                android:id="@+id/profilePicture"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:onClick="onProfilePictureClick"
                app:srcCompat="@drawable/select_avatar" />

            <EditText
                android:id="@+id/nameTextBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/profilePicture"
                android:layout_marginTop="13dp"
                android:ems="10"
                android:hint="@string/name"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/emailTextBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/nameTextBox"
                android:layout_marginTop="11dp"
                android:ems="10"
                android:hint="@string/email"
                android:inputType="textEmailAddress" />

            <EditText
                android:id="@+id/phoneNumberTB"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/emailTextBox"
                android:layout_marginTop="11dp"
                android:ems="10"
                android:hint="@string/phone"
                android:inputType="phone" />


            <TextView
                android:id="@+id/departmentLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/phoneNumberTB"
                android:layout_marginTop="10dp"
                android:text="@string/department"
                android:textSize="18sp"
                android:textStyle="bold" />

            <RadioGroup
                android:id="@+id/departmentRadioGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/departmentLabel"
                android:layout_marginBottom="13dp"
                android:layout_marginTop="10dp">

                <RadioButton
                    android:id="@+id/sisButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/departmentLabel"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:checked="true"
                    android:text="@string/sisButtonText"
                    android:textSize="18sp" />

                <RadioButton
                    android:id="@+id/csButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/sisButton"
                    android:layout_weight="1"
                    android:text="@string/csButtonText"
                    android:textSize="18sp" />

                <RadioButton
                    android:id="@+id/bioButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_below="@+id/csButton"
                    android:layout_weight="1"
                    android:text="@string/bioButtonText"
                    android:textSize="18sp" />
            </RadioGroup>

            <Button
                android:id="@+id/submitButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/departmentRadioGroup"
                android:layout_centerHorizontal="true"
                android:onClick="onSubmitClick"
                android:text="@string/submit"
                android:textSize="18sp"
                android:layout_marginTop="15dp"/>

        </RelativeLayout>
    </ScrollView>
</RelativeLayout>
