<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="io.vamshedhar.inclass10.SignUpActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/userProfilePic"
            android:layout_width="wrap_content"
            android:layout_height="180dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            app:srcCompat="@drawable/add_photo" />

        <EditText
            android:id="@+id/firstName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/userProfilePic"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:hint="@string/first_name"
            android:inputType="textPersonName"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true" />

        <EditText
            android:id="@+id/lastName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/firstName"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:hint="@string/last_name"
            android:inputType="textPersonName"
            android:layout_alignParentEnd="true"
            android:layout_alignParentStart="true" />

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/lastName"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/choosePassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/email"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:fontFamily="sans-serif"
            android:hint="@string/password_signup"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/repeatPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/choosePassword"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:fontFamily="sans-serif"
            android:hint="@string/confirm_password"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/cancelBtn"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/repeatPassword"
            android:layout_below="@+id/repeatPassword"
            android:layout_marginTop="18dp"
            android:text="Cancel"
            android:textAllCaps="false"
            android:textSize="18sp"
            android:layout_marginLeft="15dp"/>

        <Button
            android:id="@+id/registerBtn"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/repeatPassword"
            android:layout_alignTop="@+id/cancelBtn"
            android:text="Sign Up"
            android:textAllCaps="false"
            android:textSize="18sp"
            android:layout_marginRight="15dp"/>
    </RelativeLayout>

</ScrollView>
